--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@replygirl/change-case-object": "^1.2.5",
     "@replygirl/tc": "^3.0.0",
-    "airtable": "github:replygirl/airtable.js#main",
+    "airtable": "^0.10.1",
     "twilio": "^3.54.2"
   }
 }
