--- a/.gitignore
+++ b/.gitignore
@@ -542,4 +542,11 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+### @replygirl
+
+# Vercel
 .vercel
+
+# Environment variables
+*.local
+dist/
