--- a/package.json
+++ b/package.json
@@ -1,5 +1,42 @@
 {
   "name": "ampled-aid",
-  "version": "1.0.0-alpha.0",
-  "author": "replygirl <moon@moon.fyi> (https://moon.fyi)"
+  "version": "1.0.0-alpha.1",
+  "author": "replygirl <moon@moon.fyi> (https://moon.fyi)",
+  "private": true,
+  "scripts": {
+    "dev": "vite --port 3333",
+    "build": "cross-env NODE_ENV=production vite build"
+  },
+  "dependencies": {
+    "@vueuse/core": "^4.0.10",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^0.4.3",
+    "@iconify/json": "^1.1.292",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@vitejs/plugin-vue": "^1.1.2",
+    "@vue/compiler-sfc": "^3.0.5",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.18.0",
+    "prettier": "^2.1.2",
+    "pug": "^3.0.0",
+    "stylus": "^0.54.8",
+    "tailwindcss": "^2.0.1-compat",
+    "typescript": "^4.1.3",
+    "vite": "^2.0.0-beta.51",
+    "vite-plugin-components": "^0.6.6",
+    "vite-plugin-icons": "^0.2.1",
+    "vite-plugin-pages": "^0.1.7",
+    "voie-pages": "^0.4.0"
+  },
+  "eslintConfig": {
+    "extends": "@antfu/eslint-config",
+    "rules": {
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": "off"
+    }
+  }
 }
