--- a/package.json
+++ b/package.json
@@ -1,43 +1,50 @@
 {
-  "name": "ampled-aid",
-  "version": "1.0.0-alpha.1",
+  "name": "ampled-markete",
+  "version": "1.0.0-alpha.2",
   "author": "replygirl <moon@moon.fyi> (https://moon.fyi)",
   "private": true,
   "scripts": {
-    "dev": "vite --port 3333",
+    "dev": "vite",
     "build": "cross-env NODE_ENV=production vite build"
   },
   "dependencies": {
-    "@replygirl/vanity": "^1.0.0-alpha.5",
-    "@vueuse/core": "^4.0.10",
+    "@replygirl/change-case-object": "^1.3.0",
+    "@replygirl/tc": "^3.0.0",
+    "@replygirl/vanity": "^1.0.0-beta.2",
+    "@vueuse/core": "^4.3.0",
+    "axios": "^0.21.1",
     "change-case": "^4.1.2",
     "hash-sum": "^2.0.0",
-    "maska": "^1.3.2",
-    "nullable-ts": "^1.3.1",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.3"
+    "maska": "^1.4.1",
+    "random-item": "^3.1.0",
+    "twilio": "^3.57.0",
+    "vue": "^3.0.6",
+    "vue-router": "^4.0.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.4.3",
-    "@iconify/json": "^1.1.292",
+    "@iconify/json": "^1.1.309",
     "@types/hash-sum": "^1.0.0",
-    "@types/node": "^14.14.22",
+    "@types/node": "^14.14.31",
     "@types/resize-observer-browser": "^0.1.5",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@vitejs/plugin-vue": "^1.1.2",
-    "@vue/compiler-sfc": "^3.0.5",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@vercel/node": "^1.9.0",
+    "@vitejs/plugin-vue": "^1.1.5",
+    "@vue/compiler-sfc": "^3.0.6",
+    "autoprefixer": "^10.2.4",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.21.0",
     "postcss-nesting": "^7.0.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "pug": "^3.0.0",
     "stylus": "^0.54.8",
-    "tailwindcss": "^2.0.1-compat",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.51",
-    "vite-plugin-components": "^0.6.6",
-    "vite-plugin-icons": "^0.2.1",
-    "vite-plugin-pages": "^0.1.7",
+    "tailwindcss": "^2.0.3",
+    "type-fest": "^0.21.2",
+    "typescript": "^4.2.2",
+    "vite": "^2.0.4",
+    "vite-plugin-components": "^0.7.5",
+    "vite-plugin-icons": "^0.3.2",
+    "vite-plugin-pages": "^0.4.7",
     "voie-pages": "^0.4.0"
   },
   "eslintConfig": {
